css/capmap.css
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

#map-canvas{
    height: 100%;
    z-index: 1;
}

.leaflet-horizontalcenter {
    position: absolute;
    z-index: 1000;
    pointer-events: none;
    left: calc(50% - 200px); 
}

@media only screen and (max-width: 510px) {
  .leaflet-horizontalcenter {
      left: calc(50% - 150px); 
  } 
}

.leaflet-horizontallcenter .leaflet-control {
    margin-bottom: 10px;
}

.leaflet-verticalcenter {
    position: absolute;
    z-index: 1000;
    pointer-events: none;
    top: 50%;
    transform: translateY(-50%);
    padding-top: 10px;
}

.leaflet-verticalcenter .leaflet-control {
    margin-bottom: 15px;
}
.active {
    background-color: #bba7a7 !important;
    border: 2px solid #bba7a7 !important;
}

#setDay0UI, #setDay1UI, #setDay2UI, #setDay3UI, #setDay4UI, #setAllDaysUI {
    margin-right: 12px;
    background-color: #fff;
    border: 2px solid #fff;
    border-radius: 3px;
    box-shadow: 0 2px 6px rgba(0,0,0,.3);
    cursor: pointer;
    float: left;
    margin-bottom: 15px;
    font-family: Roboto,Arial,sans-serif;
    font-size: 15px;
    line-height: 25px;
    padding-left: 5px;
    padding-right: 5px;
    text-align: center;
    &:hover {
        background-color: #dbcdcd;
        border: 2px solid #dbcdcd;
    }
}

#setDay1UI, #setDay2UI, #setDay3UI, #setDay4UI, #setAllDaysUI {
    margin-right: 12px;
}

#legend-container {
    width: 100%;
    /* height: 30px; */
    max-width: 400px; 
    margin: 0 auto;
}

#legend {
    background-color: rgba(254,254,254,0.7);
    border: 2px solid #fff;
    border-radius: 3px;
    box-shadow: 0 2px 6px rgba(0,0,0,.3);
    padding: 5px;
    margin-bottom: 22px;
    z-index: 100;
    width: 100%;
    max-width: 400px;
    position: absolute;
    bottom: 0;
    /* left: calc(50% - 130px); */
}

#icon-legend-container {
    width: 100%;
    /* height: 30px; */
    max-width: 400px; 
    margin: 0 auto;
}

#icon-legend {
    background-color: rgba(254,254,254,0.7);
    border: 2px solid #fff;
    border-radius: 3px;
    box-shadow: 0 2px 6px rgba(0,0,0,.3);
    padding: 5px;
    margin-top: 22px;
    margin-right: 22px;
    z-index: 100;
    width: 100%;
    max-width: 300px;
    position: absolute;
    top: 0;
    right: 0;
}

#icon-legend-header {
    text-align: center;
    font-size: 26px;
    font-weight: bold;
    user-select: none;
}

#legend-icon-names {
    margin-top: 5px;
    width: 90%;
    user-select: none;
}

@media only screen and (max-width: 500px) {
    #legend, #legend-container {
        max-width: 260px;
        margin-bottom: 40px;
    }
    
}

@media only screen and (max-width: 420px) {
    .leaflet-horizontalcenter {
        max-width: 320px;
        margin-left: 30px; 
    }
}

@media only screen and (max-width: 370px) {
    .leaflet-horizontalcenter {
        max-width: 320px;
        margin-left: 50px; 
    }
    
}

.colorLegend {
    border: 2px solid #000;
    border-radius: 3px;
    box-shadow: 0 2px 6px rgba(0,0,0,.3);
    padding: 5px;
}

#eventSelect {
    text-align: center;
}

#levelGreen {
    background-color: #00FF00;
}

#levelYellow {
    background-color: yellow;
}

#levelOrange {
    background-color: orange;
}

#levelRed {
    background-color: red;
}

.map-marker-label{
    position: absolute;
    color: blue;
    font-size: 16px;
    font-weight: bold;
}

.iw-title {
    font-size: 1.1em;
    font-weight: bold;
    margin-bottom: 0.5em;
    display: block;
}

#senderName {
    text-align: center;
}
#sentDate {
    text-align: center;
}

